--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "peerDependencies": {
     "eslint": "^7.2.0",
     "prettier": "^2.1.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
